--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
-minecraft_version=1.21.4-pre1
-yarn_mappings=1.21.4-pre1+build.1
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
 loader_version=0.16.9
 
 # Mod Properties
@@ -13,4 +13,4 @@ maven_group=com.nemonotfound.nemosbettermending
 archives_base_name=nemos-better-mending
 
 # Dependencies
-fabric_version=0.109.1+1.21.4
+fabric_version=0.110.5+1.21.4
